one more plugin

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "llm-anthropic>=0.14.1",
     "llm-cmd>=0.2a0",
     "llm-cmd-comp>=1.1.1",
+    "llm-docs>=0.2",
     "llm-fragments-github>=0.1",
     "llm-gemini>=0.12",
     "llm-hacker-news>=0.1",
